geometry_attributes_poll issues #90026

Closed
opened 2021-07-21 16:58:04 +02:00 by Vincent Blankfield · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-21 13:14, hash: 22bef356ae
Worked: none

Short description of error

  • Adding/removing attributes in edit mode is allowed but doesn't work.
  • Removing attributes is allowed when there are no attributes.

Exact steps for others to reproduce the error

  1. Open Object Data Properties -> Attributes for the default cube.
  2. Notice the - button is active while there are no attributes.
  3. Tab into edit mode.
  4. Add some attributes to the list.
  5. Tab back to the object mode.
  6. Notice that previously added attributes disappear.

Not sure if adding/removing attributes should be supported in edit mode, but while it doesn't work it shouldn't be allowed.

This patch will disable adding/removing attributes in edit mode, and removing when there are no attributes:
attribute_poll_min.diff

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-21 13:14, hash: `22bef356ae` Worked: none **Short description of error** - Adding/removing attributes in edit mode is allowed but doesn't work. - Removing attributes is allowed when there are no attributes. **Exact steps for others to reproduce the error** 1. Open `Object Data Properties -> Attributes` for the default cube. 2. Notice the `-` button is active while there are no attributes. 3. `Tab` into edit mode. 4. Add some attributes to the list. 5. Tab back to the object mode. 6. Notice that previously added attributes disappear. --- Not sure if adding/removing attributes should be supported in edit mode, but while it doesn't work it shouldn't be allowed. This patch will disable adding/removing attributes in edit mode, and removing when there are no attributes: [attribute_poll_min.diff](https://archive.blender.org/developer/F10232025/attribute_poll_min.diff)

Added subscriber: @VincentBlankfield

Added subscriber: @VincentBlankfield
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-07-21 17:16:49 +02:00
Member

Can confirm (and thx for the patch!).

Think this should be supported in editmode, will check.

Can confirm (and thx for the patch!). Think this should be supported in editmode, will check.
Member

Made all polls consistent now (in regards to checking if there is something to remove at all) in D11990: Make polls for removing mesh data layers consistent.
Will check editmode tomorrow.

Made all polls consistent now (in regards to checking if there is something to remove at all) in [D11990: Make polls for removing mesh data layers consistent](https://archive.blender.org/developer/D11990). Will check editmode tomorrow.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Wow, the best bug reports come with patches, kudos!

Wow, the best bug reports come with patches, kudos!

This issue was referenced by 57668d84cf

This issue was referenced by 57668d84cf17d5e883bdfe9ec584c0683d8db860

This issue was referenced by 97712b018d

This issue was referenced by 97712b018df71ccf1e2639d7ffa16618a0b81b71
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90026
No description provided.